--- a/Server/Client/app.html
+++ b/Server/Client/app.html
@@ -1,20 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+<!-- External -->
 <script type="text/javascript" src="/Client/jquery-1.8.2.js"></script>
-
-<script type="text/javascript" src="/Client/processor.js"></script>
-<script type="text/javascript" src="/Client/instance_processor.js"></script>
-
 <script type="text/javascript" src="/Client/jquery.form.js"></script>
-
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-
-<script type="text/javascript" src="/Client/pfront.js"></script>
-<script type="text/javascript" src="/Client/main.js"></script>
-
 <script type="text/javascript" src="/Client/jquery-windows-engine/jquery.windows-engine.js"></script>
 
+<!-- Initialization -->
+<script type="text/javascript" src="/Client/init.js"></script>
+
+<!-- XML Helper -->
+<script type="text/javascript" src="/Client/xml_helper.js"></script>
+
+<!-- Clafer and Instances -->
+<script type="text/javascript" src="/Client/clafer_processor.js"></script>
+<script type="text/javascript" src="/Client/instance_processor.js"></script>
+<script type="text/javascript" src="/Client/instance_converter.js"></script>
+
+<!-- Pareto Front Visualization -->
+<script type="text/javascript" src="/Client/pfront.js"></script>
+
+<!-- Modules -->
+<script type="text/javascript" src="/Client/md_goals.js"></script>
+<script type="text/javascript" src="/Client/md_graph.js"></script>
+<script type="text/javascript" src="/Client/md_comparison_table.js"></script>
+
+<!-- Main -->
+<script type="text/javascript" src="/Client/main.js"></script>
+
+
+<!-- STYLES -->
 <link rel="stylesheet" type="text/css" href="/Client/styles.css"/>
 <link rel="stylesheet" type="text/css" href="/Client/jquery-windows-engine/jquery.windows-engine.css"/>
 
