--- a/Server/Client/app.html
+++ b/Server/Client/app.html
@@ -23,6 +23,7 @@
 <script type="text/javascript" src="/Client/pfront.js"></script>
 
 <!-- Modules -->
+<script type="text/javascript" src="/Client/md_input.js"></script>
 <script type="text/javascript" src="/Client/md_console.js"></script>
 <script type="text/javascript" src="/Client/md_goals.js"></script>
 <script type="text/javascript" src="/Client/md_graph.js"></script>
