Added DataTable class and multiple selection

--- a/Server/Client/app.html
+++ b/Server/Client/app.html
@@ -20,7 +20,13 @@
 <script type="text/javascript" src="/Client/instance_converter.js"></script>
 
 <!-- Pareto Front Visualization -->
+<script type="text/javascript" src="/Client/data.js"></script>
+
+
+<script type="text/javascript" src="/Client/ptable.js"></script>
 <script type="text/javascript" src="/Client/pfront.js"></script>
+
+<script type="text/javascript" src="/Client/selector.js"></script>
 
 <!-- Modules -->
 <script type="text/javascript" src="/Client/md_input.js"></script>
@@ -28,6 +34,7 @@
 <script type="text/javascript" src="/Client/md_goals.js"></script>
 <script type="text/javascript" src="/Client/md_graph.js"></script>
 <script type="text/javascript" src="/Client/md_comparison_table.js"></script>
+<script type="text/javascript" src="/Client/md_usecases.js"></script>
 
 <!-- Main -->
 <script type="text/javascript" src="/Client/main.js"></script>
