Added Analysis Window

--- a/Server/Client/app.html
+++ b/Server/Client/app.html
@@ -7,6 +7,9 @@
 <script type="text/javascript" src="/Client/jquery.form.js"></script>
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 <script type="text/javascript" src="/Client/jquery-windows-engine/jquery.windows-engine.js"></script>
+<!-- sets -->
+<script type="text/javascript">JSCLASS_PATH = '/Client/set/min'</script>
+<script type="text/javascript" src="/Client/set/min/loader-browser.js"></script>
 
 <!-- Initialization -->
 <script type="text/javascript" src="/Client/init.js"></script>
@@ -35,6 +38,7 @@
 <script type="text/javascript" src="/Client/md_graph.js"></script>
 <script type="text/javascript" src="/Client/md_comparison_table.js"></script>
 <script type="text/javascript" src="/Client/md_usecases.js"></script>
+<script type="text/javascript" src="/Client/md_analysis.js"></script>
 
 <!-- Main -->
 <script type="text/javascript" src="/Client/main.js"></script>
