Added forth dimension and improved comparison

--- a/Server/Client/app.html
+++ b/Server/Client/app.html
@@ -26,6 +26,7 @@
 <script type="text/javascript" src="/Client/data.js"></script>
 
 
+<script type="text/javascript" src="/Client/plist.js"></script>
 <script type="text/javascript" src="/Client/ptable.js"></script>
 <script type="text/javascript" src="/Client/pfront.js"></script>
 
