removed 'Client/' prefix from paths
because the '/Client' is now server by
`server.use(express.static(__dirname + '/Client'));`

--- a/Server/Client/app.html
+++ b/Server/Client/app.html
@@ -3,51 +3,51 @@
 <head>
 
 <!-- External -->
-<script type="text/javascript" src="/Client/jquery-1.8.2.js"></script>
-<script type="text/javascript" src="/Client/jquery.form.js"></script>
+<script type="text/javascript" src="/jquery-1.8.2.js"></script>
+<script type="text/javascript" src="/jquery.form.js"></script>
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-<script type="text/javascript" src="/Client/jquery-windows-engine/jquery.windows-engine.js"></script>
+<script type="text/javascript" src="/jquery-windows-engine/jquery.windows-engine.js"></script>
 <!-- sets -->
-<script type="text/javascript">JSCLASS_PATH = '/Client/set/min'</script>
-<script type="text/javascript" src="/Client/set/min/loader-browser.js"></script>
+<script type="text/javascript">JSCLASS_PATH = '/set/min'</script>
+<script type="text/javascript" src="/set/min/loader-browser.js"></script>
 
 <!-- Initialization -->
-<script type="text/javascript" src="/Client/init.js"></script>
+<script type="text/javascript" src="/init.js"></script>
 
 <!-- XML Helper -->
-<script type="text/javascript" src="/Client/xml_helper.js"></script>
+<script type="text/javascript" src="/xml_helper.js"></script>
 
 <!-- Clafer and Instances -->
-<script type="text/javascript" src="/Client/clafer_processor.js"></script>
-<script type="text/javascript" src="/Client/instance_processor.js"></script>
-<script type="text/javascript" src="/Client/instance_converter.js"></script>
+<script type="text/javascript" src="/clafer_processor.js"></script>
+<script type="text/javascript" src="/instance_processor.js"></script>
+<script type="text/javascript" src="/instance_converter.js"></script>
 
 <!-- Pareto Front Visualization -->
-<script type="text/javascript" src="/Client/data.js"></script>
+<script type="text/javascript" src="/data.js"></script>
 
 
-<script type="text/javascript" src="/Client/plist.js"></script>
-<script type="text/javascript" src="/Client/ptable.js"></script>
-<script type="text/javascript" src="/Client/pfront.js"></script>
+<script type="text/javascript" src="/plist.js"></script>
+<script type="text/javascript" src="/ptable.js"></script>
+<script type="text/javascript" src="/pfront.js"></script>
 
-<script type="text/javascript" src="/Client/selector.js"></script>
+<script type="text/javascript" src="/selector.js"></script>
 
 <!-- Modules -->
-<script type="text/javascript" src="/Client/md_input.js"></script>
-<script type="text/javascript" src="/Client/md_console.js"></script>
-<script type="text/javascript" src="/Client/md_goals.js"></script>
-<script type="text/javascript" src="/Client/md_graph.js"></script>
-<script type="text/javascript" src="/Client/md_comparison_table.js"></script>
-<script type="text/javascript" src="/Client/md_usecases.js"></script>
-<script type="text/javascript" src="/Client/md_analysis.js"></script>
+<script type="text/javascript" src="/md_input.js"></script>
+<script type="text/javascript" src="/md_console.js"></script>
+<script type="text/javascript" src="/md_goals.js"></script>
+<script type="text/javascript" src="/md_graph.js"></script>
+<script type="text/javascript" src="/md_comparison_table.js"></script>
+<script type="text/javascript" src="/md_usecases.js"></script>
+<script type="text/javascript" src="/md_analysis.js"></script>
 
 <!-- Main -->
-<script type="text/javascript" src="/Client/main.js"></script>
+<script type="text/javascript" src="/main.js"></script>
 
 
 <!-- STYLES -->
-<link rel="stylesheet" type="text/css" href="/Client/styles.css"/>
-<link rel="stylesheet" type="text/css" href="/Client/jquery-windows-engine/jquery.windows-engine.css"/>
+<link rel="stylesheet" type="text/css" href="/styles.css"/>
+<link rel="stylesheet" type="text/css" href="/jquery-windows-engine/jquery.windows-engine.css"/>
 
 <title>ClaferMoo Explorer</title>
 
