--- a/Server/Client/app.html
+++ b/Server/Client/app.html
@@ -21,7 +21,7 @@
 <script type="text/javascript" src="/clafer_processor.js"></script>
 <script type="text/javascript" src="/instance_processor.js"></script>
 <script type="text/javascript" src="/instance_converter.js"></script>
-<script type="text/javascript" src="/IGinstance_parser.js"></script>
+<script type="text/javascript" src="/Instance_parser.js"></script>
 
 <!-- Pareto Front Visualization -->
 <script type="text/javascript" src="/data.js"></script>
