--- a/Server/Client/app.html
+++ b/Server/Client/app.html
@@ -50,7 +50,7 @@
 <link rel="stylesheet" type="text/css" href="/styles.css"/>
 <link rel="stylesheet" type="text/css" href="/jquery-windows-engine/jquery.windows-engine.css"/>
 
-<title>ClaferMoo Explorer</title>
+<title>ClaferMoo Visualizer</title>
 
 </head>
 
