Put filter fuunctions in seperate file

--- a/Server/Client/app.html
+++ b/Server/Client/app.html
@@ -22,6 +22,7 @@
 <script type="text/javascript" src="/instance_processor.js"></script>
 <script type="text/javascript" src="/instance_converter.js"></script>
 <script type="text/javascript" src="/Instance_parser.js"></script>
+<script type="text/javascript" src="/instance_filter.js"></script>
 
 <!-- Pareto Front Visualization -->
 <script type="text/javascript" src="/data.js"></script>
