Added help system from configurator

--- a/Server/Client/app.html
+++ b/Server/Client/app.html
@@ -45,6 +45,7 @@
 
 <!-- Main -->
 <script type="text/javascript" src="/main.js"></script>
+<script type="text/javascript" src="/help_getter.js"></script>
 
 
 <!-- STYLES -->
