--- a/Server/Client/help_pages/bubblefrontgraph_help.html
+++ b/Server/Client/help_pages/bubblefrontgraph_help.html
@@ -6,7 +6,15 @@
 
 <body class="help">
 	<pre>
-		Text goes here
+Bubble Front Graph
+
+In this window, you can visually explore the Pareto front in up to 4 quality dimensions simulataneously. 
+
+--Drag &amp; drop quality dimensions onto the graph to decide how they should be visualized.
+
+--Hoover over a bubble to see detailed information.
+
+--Click a bubble to select for comparison in the Variant Comparer view.
 	</pre>
 </body>
 
