--- a/Server/Client/help_pages/featureandqualitymatrix_help.html
+++ b/Server/Client/help_pages/featureandqualitymatrix_help.html
@@ -6,7 +6,15 @@
 
 <body class="help">
 	<pre>
-		Text goes here
+Feature and Quality Matrix
+
+In this window, you can filter, sort, remove or compare the optimal variants from your model
+
+--Press <span><image src="/images/checkbox_empty.bmp"></span> to add a require(once) or eliminate(twice) filter.
+
+--Press <span><input type="submit" value="Distinct"></span> to fade out any features that are uniform across the table. Press <span><input type="submit" value="Normal"></span> to restore the initial view.
+
+--Press <span><input type="submit" value="Reset"></span> to clear any filters you may have active.
 	</pre>
 </body>
 
