--- a/Server/Client/help_pages/input_help.html
+++ b/Server/Client/help_pages/input_help.html
@@ -6,7 +6,20 @@
 
 <body class="help">
 	<pre>
-		Text goes here
+Input
+
+From this window, you can choose a <i>.cfr</i> file to optimize.
+
+--The model must be in an <i>attributed feature model with inheritance</i> subset of Clafer and it must contain optimization goals.
+
+--Make sure the extension to the file you are trying to submit is ".cfr"
+
+--Use the button <span><input type="submit" value="Optimize"></span>.
+
+From this window, you can also choose a <i>.data</i> file with configurations of  variants to add to the current visualization.
+
+--The <i>.data</i> file can be obtained using the button <span><input type="submit" value="Save Selected"></span> in Variant Comparer view or by running ClaferIG with parameters "--useuids --addtypes" and removing all ": clafer", ": integer", and ": string" supertypes.
+
 	</pre>
 </body>
 
