--- a/Server/Client/help_pages/variantcomparer_help.html
+++ b/Server/Client/help_pages/variantcomparer_help.html
@@ -6,7 +6,15 @@
 
 <body class="help">
 	<pre>
-		Text goes here
+Variant Comparer
+
+In this window, you can compare a set of selected variants and perform tradeoff analysis.
+
+--Select and unselect variants by clicking on bubbles in the graph or column headers in the table.
+
+--Remove variants from the view by pressing 'x'.
+
+--Save the selected variants into a <i>.data</i> file using <span><input type="submit" value="Save Selected"></span> button.
 	</pre>
 </body>
 
