--- a/Server/Client/help_pages/objectives_help.html
+++ b/Server/Client/help_pages/objectives_help.html
@@ -6,7 +6,12 @@
 
 <body class="help">
 	<pre>
-		Text goes here
+Objectives
+
+In this window, you can view the optimization objectives and, initially, the ranges of quality values. 
+
+--Set min and/or max values to show only variants withing the give quality range. You can set a minimum, or a maximum, or both.
+
 	</pre>
 </body>
 
