improved help pages

--- a/Server/Client/help_pages/bubblefrontgraph_help.html
+++ b/Server/Client/help_pages/bubblefrontgraph_help.html
@@ -6,15 +6,18 @@
 
 <body class="help">
 	<pre>
-Bubble Front Graph
+<h2>Bubble Front Graph</h2>
 
-In this window, you can visually explore the Pareto front in up to 4 quality dimensions simulataneously. 
+In this view, you can visually explore the Pareto front in up to 4 quality dimensions simulataneously.
 
---Drag &amp; drop quality dimensions onto the graph to decide how they should be visualized.
+--Drag &amp; drop quality dimensions from the view <a href="objectives_help.html">Objectives</a> onto the graph to decide how they should be visualized (as Y-axis, X-axis, color, or bubble size).
 
 --Hoover over a bubble to see detailed information.
 
---Click a bubble to select for comparison in the Variant Comparer view.
+--Click a bubble to select for comparison in the view <a href="variantcomparer_help.html">Variant Comparer</a>.
+
+<br>
+<a href="start_help.html">Return to Welcome page</a>
 	</pre>
 </body>
 
