--- a/Server/Client/help_pages/objectives_help.html
+++ b/Server/Client/help_pages/objectives_help.html
@@ -6,12 +6,14 @@
 
 <body class="help">
 	<pre>
-Objectives
+<h2>Objectives</h2>
 
 In this window, you can view the optimization objectives and, initially, the ranges of quality values. 
 
 --Set min and/or max values to show only variants withing the give quality range. You can set a minimum, or a maximum, or both.
 
+<br>
+<a href="start_help.html">Return to Welcome page</a>
 	</pre>
 </body>
 
