--- a/Server/Client/help_pages/start_help.html
+++ b/Server/Client/help_pages/start_help.html
@@ -6,21 +6,24 @@
 
 <body class="help">
 	<pre>
-Welcome to ClaferMoo Visualizer
+<h2>Welcome to <i>ClaferMoo Visualizer</i></h2>
 
-In this tool, you can visualize and explore the set of non-dominated optimal variants (called Pareto front) computed by Clafer Multi-Objective Optimizer.
+--Click anywhere outside help windows to hide.
+
+In this tool, you can visualize and explore the set of non-dominated optimal variants (called Pareto front) computed by Clafer Multi Objective Optimizer (ClaferMoo).
 
 Press the '?' button of each window to see specific help. In general:
 
 -- Use the input view to select a <i>.cfr</i> model and optimize it.
 
--- Use the Bubble Front Graph window to visually explore the Pareto front.
+-- Use the <a href="bubblefrontgraph_help.html">Bubble Front Graph</a> view to visually explore the Pareto front.
 
--- Use the Feature and Quality Matrix View to filter the instances by selecting and eliminating features.
+-- Use the <a href="featureandqualitymatrix_help.html">Feature and Quality Matrix</a> view to filter the instances by selecting and eliminating features.
 
--- Use the Variant Comparer View to perform tradeoff analysis of a set of selected variants.
+-- Use the <a href="variantcomparer_help.html">Variant Comparer</a> view to perform tradeoff analysis of a set of selected variants.
 
-		<input id="cookieChoice" type=checkbox value="off"> Do not display this message again.
+<br>
+<input id="cookieChoice" type=checkbox value="off"> Do not display this message at start again.
 	</pre>
 </body>
 
