--- a/Server/Client/help_pages/variantcomparer_help.html
+++ b/Server/Client/help_pages/variantcomparer_help.html
@@ -6,15 +6,18 @@
 
 <body class="help">
 	<pre>
-Variant Comparer
+<h2>Variant Comparer</h2>
 
 In this window, you can compare a set of selected variants and perform tradeoff analysis.
 
 --Select and unselect variants by clicking on bubbles in the graph or column headers in the table.
 
---Remove variants from the view by pressing 'x'.
+--Press <span><image src="/images/remove.png"></span> to remove a variant from the view.
 
 --Save the selected variants into a <i>.data</i> file using <span><input type="submit" value="Save Selected"></span> button.
+
+<br>
+<a href="start_help.html">Return to Welcome page</a>
 	</pre>
 </body>
 
