fixed cookie for 'do not show help choice'

--- a/Server/Client/help_pages/start_help.html
+++ b/Server/Client/help_pages/start_help.html
@@ -23,7 +23,7 @@ Press the '?' button of each window to see specific help. In general:
 -- Use the <a href="variantcomparer_help.html">Variant Comparer</a> view to perform tradeoff analysis of a set of selected variants.
 
 <br>
-<input id="cookieChoice" type=checkbox value="off"> Do not display this message at start again.
+<input id="noVizHelpChoice" type=checkbox value="off"> Do not display this message at start again.
 	</pre>
 </body>
 
