--- a/Server/Client/app.html
+++ b/Server/Client/app.html
@@ -22,6 +22,7 @@
 <script type="text/javascript" src="/commons/instance_processor.js"></script>
 <script type="text/javascript" src="/commons/instance_converter.js"></script>
 <script type="text/javascript" src="/instance_filter.js"></script>
+<script type="text/javascript" src="/instance_parser.js"></script>
 
 <!-- Pareto Front Visualization -->
 <script type="text/javascript" src="/commons/data.js"></script>
