Fixed IE issues.

--- a/Server/Client/app.html
+++ b/Server/Client/app.html
@@ -4,6 +4,7 @@
 
 <!-- External -->
 <script type="text/javascript" src="/commons/jquery-1.8.2.js"></script>
+<script type="text/javascript" src="/jquery.html5-placeholder-shim.js"></script>
 <script type="text/javascript" src="/commons/jquery.form.js"></script>
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 <script type="text/javascript" src="/commons/jquery-windows-engine/jquery.windows-engine.js"></script>
