Improved help system.

--- a/Server/Client/help_pages/bubblefrontgraph_help.html
+++ b/Server/Client/help_pages/bubblefrontgraph_help.html
@@ -4,21 +4,16 @@
 <link rel="stylesheet" type="text/css" href="/styles.css"/>
 </head>
 
-<body class="help">
-	<pre>
+<body class="helpbody">
 <h2>Bubble Front Graph</h2>
-
 In this view, you can visually explore the Pareto front in up to 4 quality dimensions simulataneously.
 
---Drag &amp; drop quality dimensions from the view <a href="objectives_help.html">Objectives</a> onto the graph to decide how they should be visualized (as Y-axis, X-axis, color, or bubble size).
-
---Hoover over a bubble to see detailed information.
-
---Click a bubble to select for comparison in the view <a href="variantcomparer_help.html">Variant Comparer</a>.
-
-<br>
+<ul>
+<li>Drag &amp; drop quality dimensions from the view <a href="objectives_help.html">Objectives</a> onto the graph to decide how they should be visualized (as Y-axis, X-axis, color, or bubble size).</li>
+<li>Hoover over a bubble to see detailed information.</li>
+<li>Click a bubble to select for comparison in the view <a href="variantcomparer_help.html">Variant Comparer</a>.</li>
+</ul>
 <a href="start_help.html">Return to Welcome page</a>
-	</pre>
 </body>
 
 </html>
