--- a/Server/Client/help_pages/variantcomparer_help.html
+++ b/Server/Client/help_pages/variantcomparer_help.html
@@ -4,21 +4,15 @@
 <link rel="stylesheet" type="text/css" href="/styles.css"/>
 </head>
 
-<body class="help">
-	<pre>
+<body class="helpbody">
 <h2>Variant Comparer</h2>
-
 In this window, you can compare a set of selected variants and perform tradeoff analysis.
-
---Select and unselect variants by clicking on bubbles in the graph or column headers in the table.
-
---Press <span><image src="/images/remove.png"></span> to remove a variant from the view.
-
---Save the selected variants into a <i>.data</i> file using <span><input type="submit" value="Save Selected"></span> button.
-
-<br>
+<ul>
+<li>Select and unselect variants by clicking on bubbles in the graph or column headers in the table.</li>
+<li>Press <span><image src="/images/remove.png"></span> to remove a variant from the view.</li>
+<li>Save the selected variants into a <i>.data</i> file using <span><input type="submit" value="Save Selected"></span> button.</li>
+</ul>
 <a href="start_help.html">Return to Welcome page</a>
-	</pre>
 </body>
 
 </html>
