--- a/Server/Client/help_pages/featureandqualitymatrix_help.html
+++ b/Server/Client/help_pages/featureandqualitymatrix_help.html
@@ -4,23 +4,17 @@
 <link rel="stylesheet" type="text/css" href="/styles.css"/>
 </head>
 
-<body class="help">
-	<pre>
+<body class="helpbody">
 <h2>Feature and Quality Matrix</h2>
-
 In this window, you can filter, sort, remove or compare the optimal variants from your model
-
---Press <span><image src="/images/checkbox_empty.bmp"></span> to add a require(once) or eliminate(twice) filter.
-
---Press <span><image src="/images/remove.png"></span> to remove a variant from the view.
-
---Press <span><input type="submit" value="Distinct"></span> to fade out any features that are uniform across the table. Press <span><input type="submit" value="Normal"></span> to restore the initial view.
-
---Press <span><input type="submit" value="Reset"></span> to clear any filters you may have active.
-
-<br>
+<ul>
+<li>Press <span><image src="/images/checkbox_empty.bmp"></span> to add a require(once) or eliminate(twice) filter.</li>
+<li>Press <span><image src="/images/remove.png"></span> to remove a variant from the view.</li>
+<li>Press <span><input type="submit" value="Distinct"></span> to fade out any features that are uniform across the table. Press <span><input type="submit" value="Normal"></span> to restore the initial view.</li>
+<li>Press <span><input type="submit" value="Reset"></span> to clear any filters you may have active.</li>
+</ul>
 <a href="start_help.html">Return to Welcome page</a>
-	</pre>
+
 </body>
 
 </html>
