--- a/Server/Client/help_pages/start_help.html
+++ b/Server/Client/help_pages/start_help.html
@@ -4,27 +4,20 @@
 <link rel="stylesheet" type="text/css" href="/styles.css"/>
 </head>
 
-<body class="help">
-	<pre>
+<body class="helpbody">
 <h2>Welcome to <i>ClaferMoo Visualizer</i></h2>
-
---Click anywhere outside help windows to hide.
-
+<ul>
+<li>Click anywhere outside help windows to hide.</li>
+</ul>
 In this tool, you can visualize and explore the set of non-dominated optimal variants (called Pareto front) computed by Clafer Multi Objective Optimizer (ClaferMoo).
-
 Press the '?' button of each window to see specific help. In general:
-
--- Use the input view to select a <i>.cfr</i> model and optimize it.
-
--- Use the <a href="bubblefrontgraph_help.html">Bubble Front Graph</a> view to visually explore the Pareto front.
-
--- Use the <a href="featureandqualitymatrix_help.html">Feature and Quality Matrix</a> view to filter the instances by selecting and eliminating features.
-
--- Use the <a href="variantcomparer_help.html">Variant Comparer</a> view to perform tradeoff analysis of a set of selected variants.
-
-<br>
+<ul>
+<li>Use the input view to select a <i>.cfr</i> model and optimize it.</li>
+<li>Use the <a href="bubblefrontgraph_help.html">Bubble Front Graph</a> view to visually explore the Pareto front.</li>
+<li>Use the <a href="featureandqualitymatrix_help.html">Feature and Quality Matrix</a> view to filter the instances by selecting and eliminating features.</li>
+<li>Use the <a href="variantcomparer_help.html">Variant Comparer</a> view to perform tradeoff analysis of a set of selected variants.</li>
+</ul>
 <input id="noVizHelpChoice" type=checkbox value="off"> Do not display this message at start again.
-	</pre>
 </body>
 
 </html>
