Fixed some help pages.

--- a/Server/Client/help_pages/start_help.html
+++ b/Server/Client/help_pages/start_help.html
@@ -17,7 +17,8 @@ Press the '?' button of each window to see specific help. In general:
 <li>Use the <a href="featureandqualitymatrix_help.html">Feature and Quality Matrix</a> view to filter the instances by selecting and eliminating features.</li>
 <li>Use the <a href="variantcomparer_help.html">Variant Comparer</a> view to perform tradeoff analysis of a set of selected variants.</li>
 </ul>
-<input id="noVizHelpChoice" type=checkbox value="off"> Do not display this message at start again.
+<br>
+<input id="noVizHelpChoice" type=checkbox value="off"/> Do not display this message at start again.
 </body>
 
 </html>
