Added version identifier to help.

--- a/Server/Client/help_pages/start_help.html
+++ b/Server/Client/help_pages/start_help.html
@@ -5,7 +5,8 @@
 </head>
 
 <body class="helpbody">
-<h2>Welcome to <i>ClaferMoo Visualizer</i></h2>
+<h2>Welcome to ClaferMooVisualizer</h2>
+<h3>v0.3.4.20-9-2013</h3>
 <ul>
 <li>Click anywhere outside help windows to hide.</li>
 </ul>
