Updated Examples and added the link to Wiki.

--- a/Server/Client/help_pages/start_help.html
+++ b/Server/Client/help_pages/start_help.html
@@ -19,6 +19,9 @@ Press the '?' button of each window to see specific help. In general:
 <li>Use the <a href="variantcomparer_help.html">Variant Comparer</a> view to perform tradeoff analysis of a set of selected variants.</li>
 </ul>
 <br>
+Please visit <a href="http://t3-necsis.cs.uwaterloo.ca:8091/MOO/Introduction" target="_blank">Multi-Objective Optimization</a> page on our <b>Clafer Wiki</b> for general information and concrete examples.
+<br>
+<br>
 <input id="noVizHelpChoice" type=checkbox value="off"/> Do not display this message at start again.
 </body>
 
