--- a/Server/Client/app.html
+++ b/Server/Client/app.html
@@ -42,6 +42,7 @@
 <script type="text/javascript" src="/md_comparison_table.js"></script>
 <script type="text/javascript" src="/md_usecases.js"></script>
 <script type="text/javascript" src="/md_analysis.js"></script>
+<script type="text/javascript" src="/md_clafermodel.js"></script>
 
 <!-- Main -->
 <script type="text/javascript" src="/main.js"></script>
