Updated help pages

--- a/Server/Client/help_pages/intro.html
+++ b/Server/Client/help_pages/intro.html
@@ -14,10 +14,13 @@ In this tool, you can edit, compile, explore, and instantiate Clafer models.
 
 Press the '?' button of each window to see specific help. In general:
 <ul>
-<li>Use the <a href="inputfileorexample_help.html">Input File or Example</a> view to compile and instantiate a model.</li>
-<li>Use the <a href="clafersourcemodel_help.html">Clafer Source Model</a> view to explore a HTML rendering of a model.</li>
-<li>Use the <a href="control_help.html">Control</a> view to generate more instances and adjust the scope.</li>
-<li>Use the <a href="output_help.html">Output</a> view to see instances, errors, and UnSAT cores.</li>
+<li>Use the <a href="mdInput.html" class="local">Input File or Example</a> view to compile and instantiate a model.</li>
+<li>Use the <a href="mdFeatureQualityMatrix.html" class="local">Matrix</a> ...</li>
+<li>Use the <a href="mdGraph.html" class="local">Graph</a> ...</li>
+<li>Use the <a href="mdVariantComparer.html" class="local">VariantComparer</a> ...</li>
+<li>Use the <a href="mdGraph.html" class="local">Graph</a> ...</li>
+<li>Use the <a href="mdGoals.html" class="local">Control</a> view to generate more instances and adjust the scope.</li>
+<li>Use the <a href="mdOutput.html" class="local">Output</a> view to see instances, errors, and UnSAT cores.</li>
 </ul>
 <br>
 For more information visit<br>
