--- a/Server/Client/help_pages/mdInput.html
+++ b/Server/Client/help_pages/mdInput.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="/commons/Client/styles.css"/>
+<script type = "text/javascript" src="/commons/Client/help_utils.js"></script>
 </head>
-
-<body class="helpbody">
+<body class="helpbody" onload="docLoad()">
 <h2>Input File or Example</h2>
 From this window, you can upload your <i>.cfr</i> file, select a predefined example, or enter the model directly using the source code editor.
 <ul>
@@ -18,7 +18,7 @@ From this window, you can upload your <i>.cfr</i> file, select a predefined exam
 	This is useful for using examples as a reference.</li>
 <li>Use the button "<span><input type="submit" value="Compile"></span>" directly above the source code editor  to compile and instantiate the model from the editor.</li>
 </ul>
-<a href="intro.html">Return to Welcome page</a>
+<a href="intro.html" class="local">Return to Welcome page</a>
 </body>
 
 </html>
