--- a/Server/Client/help_pages/mdGraph.html
+++ b/Server/Client/help_pages/mdGraph.html
@@ -5,7 +5,7 @@
 <script type = "text/javascript" src="/commons/Client/help_utils.js"></script>
 </head>
 <body class="helpbody" onload="docLoad()">
-<h2>Output</h2>
+<h2>Goals</h2>
 placeholder
 <ul>
 <li>placeholder</li>
