revised help pages

--- a/Server/Client/help_pages/intro.html
+++ b/Server/Client/help_pages/intro.html
@@ -10,17 +10,15 @@
 <ul>
 <li>Click anywhere outside help windows to hide.</li>
 </ul>
-In this tool, you can edit, compile, explore, and instantiate Clafer models. 
-
+In this tool, you can visualize and explore the set of non-dominated optimal variants (called Pareto front) computed by Clafer Multi Objective Optimizer (ClaferMoo).
 Press the '?' button of each window to see specific help. In general:
 <ul>
-<li>Use the <a href="mdInput.html" class="local">Input File or Example</a> view to compile and instantiate a model.</li>
-<li>Use the <a href="mdFeatureQualityMatrix.html" class="local">Matrix</a> ...</li>
-<li>Use the <a href="mdGraph.html" class="local">Graph</a> ...</li>
-<li>Use the <a href="mdVariantComparer.html" class="local">VariantComparer</a> ...</li>
-<li>Use the <a href="mdGraph.html" class="local">Graph</a> ...</li>
-<li>Use the <a href="mdGoals.html" class="local">Control</a> view to generate more instances and adjust the scope.</li>
-<li>Use the <a href="mdOutput.html" class="local">Output</a> view to see instances, errors, and UnSAT cores.</li>
+<li>Use the view <a href="mdInput.html" class="local">Input Clafer Model and Options</a> to upload, select an example, or enter a Clafer model to optimize.</li>
+<li>Use the view <a href="mdFeatureQualityMatrix.html" class="local">Matrix</a> view to filter the instances by selecting and eliminating features.</li>
+<li>Use the view <a href="mdGraph.html" class="local">Graph</a> to visually explore the Pareto front.</li>
+<li>Use the view <a href="mdVariantComparer.html" class="local">VariantComparer</a> to perform tradeoff analysis of a set of selected variants.</li>
+<li>Use the view <a href="mdGoals.html" class="local">Control</a> to filter by quality ranges.</li>
+<li>Use the view <a href="mdOutput.html" class="local">Output</a> to see messages.</li>
 </ul>
 <br>
 For more information visit<br>
