--- a/Server/Client/help_pages/mdFeatureQualityMatrix.html
+++ b/Server/Client/help_pages/mdFeatureQualityMatrix.html
@@ -5,11 +5,13 @@
 <script type = "text/javascript" src="/commons/Client/help_utils.js"></script>
 </head>
 <body class="helpbody" onload="docLoad()">
-<h2>Matrix</h2>
-placeholder
+<h2>Feature and Quality Matrix</h2>
+In this window, you can filter, sort, remove or compare the optimal variants from your model
 <ul>
-<li>placeholder</li>
-<li>placeholder</li>
+<li>Press <span><image src="/images/checkbox_empty.bmp"></span> to add a require(once) or eliminate(twice) filter.</li>
+<li>Press <span><image src="/images/remove.png"></span> to remove a variant from the view.</li>
+<li>Press <span><input type="submit" value="Distinct"></span> to fade out any features that are uniform across the table. Press <span><input type="submit" value="Normal"></span> to restore the initial view.</li>
+<li>Press <span><input type="submit" value="Reset"></span> to clear any filters you may have active.</li>
 </ul>
 <a href="intro.html" class="local">Return to Welcome page</a>
 </body>
