--- a/Server/Client/help_pages/mdGoals.html
+++ b/Server/Client/help_pages/mdGoals.html
@@ -5,11 +5,10 @@
 <script type = "text/javascript" src="/commons/Client/help_utils.js"></script>
 </head>
 <body class="helpbody" onload="docLoad()">
-<h2>Goals</h2>
-placeholder
+<h2>Objectives and Quality Ranges</h2>
+In this window, you can view the optimization objectives and, initially, the ranges of quality values. 
 <ul>
-<li>placeholder</li>
-<li>placeholder</li>
+<li>Set min and/or max values to show only variants withing the give quality range. You can set a minimum, or a maximum, or both.</li>
 </ul>
 <a href="intro.html" class="local">Return to Welcome page</a>
 </body>
