--- a/Server/Client/help_pages/mdGraph.html
+++ b/Server/Client/help_pages/mdGraph.html
@@ -5,11 +5,12 @@
 <script type = "text/javascript" src="/commons/Client/help_utils.js"></script>
 </head>
 <body class="helpbody" onload="docLoad()">
-<h2>Goals</h2>
-placeholder
+<h2>Bubble Front Graph</h2>
+In this view, you can visually explore the Pareto front in up to 4 quality dimensions simulataneously.
 <ul>
-<li>placeholder</li>
-<li>placeholder</li>
+<li>Drag &amp; drop quality dimensions from the view <a href="mdGoals.html">Objectives</a> onto the graph to decide how they should be visualized (as Y-axis, X-axis, color, or bubble size).</li>
+<li>Hoover over a bubble to see detailed information.</li>
+<li>Click a bubble to select for comparison in the view <a href="mdVariantComparer.html">Variant Comparer</a>.</li>
 </ul>
 <a href="intro.html" class="local">Return to Welcome page</a>
 </body>
