--- a/Server/Client/help_pages/mdOutput.html
+++ b/Server/Client/help_pages/mdOutput.html
@@ -4,12 +4,12 @@
 <link rel="stylesheet" type="text/css" href="/commons/Client/styles.css"/>
 <script type = "text/javascript" src="/commons/Client/help_utils.js"></script>
 </head>
+
 <body class="helpbody" onload="docLoad()">
 <h2>Output</h2>
-placeholder
+In this window, you can see the output messages of the compiler and optimizers.
 <ul>
-<li>placeholder</li>
-<li>placeholder</li>
+<li>Use the button "<span><input type="submit" value="Clear"></span>" to clear the contents.</li>
 </ul>
 <a href="intro.html" class="local">Return to Welcome page</a>
 </body>
