--- a/Server/Client/help_pages/mdVariantComparer.html
+++ b/Server/Client/help_pages/mdVariantComparer.html
@@ -6,10 +6,11 @@
 </head>
 <body class="helpbody" onload="docLoad()">
 <h2>Variant Comparer</h2>
-placeholder
+In this window, you can compare a set of selected variants and perform tradeoff analysis.
 <ul>
-<li>placeholder</li>
-<li>placeholder</li>
+<li>Select and unselect variants by clicking on bubbles in the graph or column headers in the table.</li>
+<li>Press <span><image src="/images/remove.png"></span> to remove a variant from the view.</li>
+<li>Save the selected variants into a <i>.data</i> file using <span><input type="submit" value="Save Selected"></span> button.</li>
 </ul>
 <a href="intro.html" class="local">Return to Welcome page</a>
 </body>
