Updated help pages

--- a/Server/Client/help_pages/mdFeatureQualityMatrix.html
+++ b/Server/Client/help_pages/mdFeatureQualityMatrix.html
@@ -6,12 +6,15 @@
 </head>
 <body class="helpbody" onload="docLoad()">
 <h2>Feature and Quality Matrix</h2>
-In this window, you can filter, sort, remove or compare the optimal variants from your model
+In this window, you can filter, sort or compare the optimal variants from your model.
 <ul>
+<li>Mouse over a cell to observe the concrete unique clafer names and values.</li>
 <li>Press <span><image src="/images/checkbox_empty.bmp"></span> to add a require(once) or eliminate(twice) filter.</li>
-<li>Press <span><image src="/images/remove.png"></span> to remove a variant from the view.</li>
 <li>Press <span><input type="submit" value="Distinct"></span> to fade out any features that are uniform across the table. Press <span><input type="submit" value="Normal"></span> to restore the initial view.</li>
 <li>Press <span><input type="submit" value="Reset"></span> to clear any filters you may have active.</li>
+<li>Click on the column headers to pick a variant for comparison.</li>
+<li>Type a clafer name into the Search box to search for a clafer by name.</li>
+<li>Expand or collapse clafer trees using by clicking on arrows close to the clafer names.</li>
 </ul>
 <a href="intro.html" class="local">Return to Welcome page</a>
 </body>
