--- a/Server/Client/help_pages/mdGraph.html
+++ b/Server/Client/help_pages/mdGraph.html
@@ -9,7 +9,7 @@
 In this view, you can visually explore the Pareto front in up to 4 quality dimensions simulataneously.
 <ul>
 <li>Drag &amp; drop quality dimensions from the view <a href="mdGoals.html">Objectives</a> onto the graph to decide how they should be visualized (as Y-axis, X-axis, color, or bubble size).</li>
-<li>Hoover over a bubble to see detailed information.</li>
+<li>Hover over a bubble to see detailed information.</li>
 <li>Click a bubble to select for comparison in the view <a href="mdVariantComparer.html">Variant Comparer</a>.</li>
 </ul>
 <a href="intro.html" class="local">Return to Welcome page</a>
