--- a/Server/Client/help_pages/mdInput.html
+++ b/Server/Client/help_pages/mdInput.html
@@ -17,7 +17,8 @@ From this window, you can upload your <i>.cfr</i> file, select a predefined exam
 	Otherwise, the example will be compiled and instantiated without affecting the contents of the editor.
 	This is useful for using examples as a reference.</li>
 <li>Use the button "<span><input type="submit" value="Optimize"></span>" directly above the source code editor to optimize the model from the editor.</li>
-<li>Use the "Optimization backend: <select><option value="">ClaferMoo</option><select>" drop down to select either the multi-objective, Alloy-based optimization backend (ClaferMoo) or the single-objective Choco-based one.</li>
+<li>Use the "Optimization backend: <select><option value="">Choco-based (IG + MOO)</option><select>" drop down to select among various backends: Choco-based, or Z3-based ones.</li>
+<li>Use various specific to the backends settings like the number of cores or number of instances, if needed.</li>
 </ul>
 <a href="intro.html" class="local">Return to Welcome page</a>
 </body>
