--- a/Server/Client/help_pages/intro.html
+++ b/Server/Client/help_pages/intro.html
@@ -10,7 +10,7 @@
 <ul>
 <li>Click anywhere outside help windows to hide.</li>
 </ul>
-In this tool, you can visualize and explore the set of non-dominated optimal variants (called Pareto front) computed by Clafer Multi Objective Optimizer (ClaferMoo).
+In this tool, you can visualize and explore the set of non-dominated optimal variants (called Pareto front) computed by one of the various optimization backends.
 Press the '?' button of each window to see specific help. In general:
 <ul>
 <li>Use the view <a href="mdInput.html" class="local">Input Clafer Model and Options</a> to upload, select an example, or enter a Clafer model to optimize.</li>
