Updated help pages

--- a/Server/Client/help_pages/mdFeatureQualityMatrix.html
+++ b/Server/Client/help_pages/mdFeatureQualityMatrix.html
@@ -9,7 +9,7 @@
 In this window, you can filter, sort or compare the optimal variants from your model.
 <ul>
 <li>Mouse over a cell to observe the concrete unique clafer names and values.</li>
-<li>Press <span><image src="/images/checkbox_empty.bmp"></span> to add a require(once) or eliminate(twice) filter.</li>
+<li>Press <span><image src="/commons/Client/images/checkbox_empty.bmp"></span> to add a require(once) or eliminate(twice) filter.</li>
 <li>Press <span><input type="submit" value="Distinct"></span> to fade out any features that are uniform across the table. Press <span><input type="submit" value="Normal"></span> to restore the initial view.</li>
 <li>Press <span><input type="submit" value="Reset"></span> to clear any filters you may have active.</li>
 <li>Click on the column headers to pick a variant for comparison.</li>
