--- a/Server/Client/help_pages/mdVariantComparer.html
+++ b/Server/Client/help_pages/mdVariantComparer.html
@@ -9,7 +9,7 @@
 In this window, you can compare a set of selected variants and perform tradeoff analysis.
 <ul>
 <li>Select and unselect variants by clicking on bubbles in the graph or column headers in the table.</li>
-<li>Press <span><image src="/images/remove.png"></span> to remove a variant from the view.</li>
+<li>Press <span><image src="/commons/Client/images/remove.png"></span> to remove a variant from the view.</li>
 <li>Save the selected variants into a <i>.data</i> file using <span><input type="submit" value="Save Selected"></span> button.</li>
 </ul>
 <a href="intro.html" class="local">Return to Welcome page</a>
